--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
                 <action android:name="acs.castac.ricsvil.photogallery.SHOW_NOTIFICATION" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".PhotoPageActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
     </application>
 
 </manifest>
